# Hefakti-DSP

./: .gitignore  README.md  pyproject.toml  setup.py
src-audacity/: README.md
src-audacity/au3-fft/: PowerSpectrumGetter.h
src-audacity/au3-utility/: MemoryX.h
src-audacity/mir/: GetMeterUsingTatumQuantizationFit.cpp  MusicInformationRetrieval.cpp  MusicInformationRetrieval.h  StftFrameProvider.h
src-audacity/soundtouch/: STTypes.h  soundtouch_config.h
src/hefakti_dsp/: __init__.py
src/hefakti_dsp/bindings/: CMakeLists.txt  __init__.py  effects_bindings.cpp  mir_bindings.cpp  scorealign_bindings.cpp  setup.py  soundtouch_bindings.cpp  vamp_bindings.cpp
